@@ -1,3 +1,8 @@
+2007-05-27 Arjen Markus  <arjenmarkus@users.sourceforge.net>
+        * plotchart.man: Documentation of dot subcommand
+        * plotchart.tcl: Support for drawing dots
+        * plotpriv.tcl: Support for drawing dots
+
 2007-05-26 Arjen Markus  <arjenmarkus@users.sourceforge.net>
         * plotchart.man: Documentation of right-hand axis, vectors
         * plotchart.tcl: Support for right-hand axis, vectors
